--- a/index.html
+++ b/index.html
@@ -55,7 +55,100 @@
                 </div>
             </div>
         </section>
+        <section class="what-i-do">
+            <!-- what i do section -->
+            <h3 class="section-title">What I Do</h3>
+            <p class="section-content">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+        </section>
+        <section class="skills">
+            <div class="skill-description">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="" class="logo">
+                    <h4 class="skill-title">vanilla JavaScript</h4>
+                    <p class="skill-para">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="" class="logo">
+                    <h4 class="skill-title"> React</h4>
+                    <p class="skill-para">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="" class="logo">
+                    <h4 class="skill-title">Node.js</h4>
+                    <p class="skill-para">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="" class="logo">
+                    <h4 class="skill-title">MongoDB</h4>
+                    <p class="skill-para">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+        <section class="summary">
+            <h3 class="summary-title">A summary of My Resume</h3>
+            <div class="edu-exp-all">
+                <div class="edu-exp">
+                    <h3 class="box-title">My Education</h3>
+                        <div class="degree-name">
+                            <h5 class="degree-title">Master in Computer Engineering</h5>
+                            <p class="college-name">Harvard University / 2015 - 2017</p>
+                            <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <div class="degree-name">
+                            <h5 class="degree-title">Master in Computer Engineering</h5>
+                            <p class="college-name">Harvard University / 2015 - 2017</p>
+                            <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <div class="degree-name">
+                            <h5 class="degree-title">Master in Computer Engineering</h5>
+                            <p class="college-name">Harvard University / 2015 - 2017</p>
+                            <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor</p>
+                        </div>
+                    
+                </div>
+                <div>
+                    <h3 class="box-title">My Experience</h3>
+                        <div class="degree-name">
+                            <h5 class="degree-title">Sr. Font End Developer</h5>
+                            <p class="college-name">Apple Inc / 2020 - Current</p>
+                            <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <div class="degree-name">
+                            <h5 class="degree-title">Jr. Font End Developer</h5>
+                            <p class="college-name">Dribbble Inc / 2018 - 2022</p>
+                            <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                        <div class="degree-name">
+                            <h5 class="degree-title">HTML Developer</h5>
+                            <p class="college-name">Adobe Inc / 2017 - 2018</p>
+                            <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                    
+                </div>
+            </div>
+            <div class="download-button">
+                <button class="btn-primary">Download CV</button>
+            </div>
+        </section>
+        <section class="contact">
+            <div >
+                <h3 class="section-title">Lets Connect</h3>
+                <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+            </div>
+            <div>
+                <h3 class="section-title">Let’s Message me</h3>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Your Name">
+                    <input type="email" name="" id="" placeholder="Email">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                    <input class="btn-primary" type="submit" value="Submit">
+                </form>
+            </div>
 
+        </section>
     </main>
     <footer>
 
